--- a/Dockerfile-python3.8
+++ b/Dockerfile-python3.8
@@ -1,9 +1,3 @@
-#
-# NOTE: THIS DOCKERFILE IS GENERATED VIA "update.sh"
-#
-# PLEASE DO NOT EDIT IT DIRECTLY.
-#
-
 # FROM debian:buster-slim
 FROM ubuntu:18.04
 
@@ -28,7 +22,7 @@ ENV PYTHON_GET_PIP_SHA256 d48ae68f297cac54db17e4107b800faae0e5210131f9f386c30c01
 ENV TZ=Asia/Shanghai
 ENV DEBIAN_FRONTEND=noninteractive
 
-
+# ubuntu 18.04 update source ==> mirrors.aliyun.com
 RUN mv /etc/apt/sources.list /etc/apt/sources.list.bak \
 && echo 'deb http://mirrors.aliyun.com/ubuntu/ bionic main restricted universe multiverse \n\
 deb-src http://mirrors.aliyun.com/ubuntu/ bionic main restricted universe multiverse \n\
