--- a/Dockerfile-python3.8
+++ b/Dockerfile-python3.8
@@ -15,6 +15,7 @@ ENV PYTHON_PIP_VERSION 20.3.1
 # https://github.com/pypa/get-pip
 # ENV PYTHON_GET_PIP_URL https://github.com/pypa/get-pip/raw/91630a4867b1f93ba0a12aa81d0ec4ecc1e7eeb9/get-pip.py
 ENV PYTHON_GET_PIP_URL https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+# ENV PYTHON_GET_PIP_URL https://github.com/pypa/get-pip/archive/20.3.1.zip
 
 ENV PYTHON_GET_PIP_SHA256 d48ae68f297cac54db17e4107b800faae0e5210131f9f386c30c0166bf8d81b7
 
