--- a/Dockerfile-jupyterlab
+++ b/Dockerfile-jupyterlab
@@ -46,6 +46,7 @@ lxml==4.6.3		\n\
 notebook==6.4.5		\n\
 ipywidgets==7.6.5	\n\
 jupyterlab==3.2.1	\n\
+xeus-python==0.13.4	\n\
 " > requirements.txt \
     && cat requirements.txt \
     && pip install -r requirements.txt -i https://mirror.baidu.com/pypi/simple \
@@ -59,7 +60,9 @@ jupyterlab==3.2.1	\n\
 \nc.NotebookApp.allow_root = True \
 \nc.NotebookApp.open_browser = False \
 " >> /home/jovyan/.jupyter/jupyter_notebook_config.py \
-    && jupyter labextension install @kiteco/jupyterlab-kite
+    && jupyter labextension install @kiteco/jupyterlab-kite \
+    && jupyter labextension install jupyterlab-execute-time \
+    && jupyter labextension install @jupyterlab/debugger
     
 
 CMD ["jupyter", "lab", "--ip=*", "--port=8888", "--no-browser", "--notebook-dir=/work"]
