--- a/Dockerfile-node
+++ b/Dockerfile-node
@@ -1,13 +1,16 @@
 FROM ubuntu:20.04
 
-ENV NODE_VERSION=16.x
+ENV NODE_BIG_VERSION=14.x
+ENV NODE_VERSION=14.19.1
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update \
   && apt-get install -y wget curl net-tools git inetutils-ping apt-utils \
-  && curl -sL https://deb.nodesource.com/setup_${NODE_VERSION} | bash - \
+  && curl -sL https://deb.nodesource.com/setup_${NODE_BIG_VERSION} | bash - \
   && apt-get install -y nodejs \
   && npm install -g yarn \
+  && npm install -g n \
+  && n $NODE_VERSION \
   && rm -rf /var/lib/apt/* 
   
 CMD ['bash']
