--- a/docker-compose-traefik.yml
+++ b/docker-compose-traefik.yml
@@ -26,7 +26,7 @@ services:
       - "--providers.docker.swarmmode=false"
       # 3.Add a constraint to only use services with the label for this stack
       # from the env var TRAEFIK_TAG
-      - "--providers.docker.constraints=LabelRegx(`traefik.constraint-label-stack`, `p.+`)"
+      - "--providers.docker.constraints=LabelRegx(`traefik.constraint-label-stack`, `gitlab.+`)"
       # 4.Do not expose all Docker services, only the ones explicitly exposed
       - "--providers.docker.exposedbydefault=false"
       # 5-8
