--- a/docker-compose-traefik.yml
+++ b/docker-compose-traefik.yml
@@ -64,9 +64,9 @@ services:
       # This public Traefik will only use services with this label
       - "traefik.constraint-label=traefik_public_tag"
       # 4-6
-      - "traefik.http.routers.stack-proxy-http.rule=Host(`0.0.0.0`)"
+      - "traefik.http.routers.stack-proxy-http.rule=Host(`traefik.wode.com`)"
       - "traefik.http.routers.stack-proxy-http.entrypoints=http"
-      - "traefik.http.services.stack-porxy.loadbalancer.server.port=80"
+      - "traefik.http.services.stack-porxy.loadbalancer.server.port=8080"
       
 
   gitlab:
@@ -96,12 +96,12 @@ services:
       - "traefik.http.services.gitlab-frontend.loadbalancer.server.port=80"
 
   tomcat:
-    image: tomcat:8.5.78-jdk8
+    image: tomcat:8.5.31-jre8
     restart: always
     networks:
       - traefik-public
-    ports:
-      - "18080:8080"
+    #ports:
+    #  - "18080:8080"
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=traefik-public"
