--- a/docker-compose-traefik.yml
+++ b/docker-compose-traefik.yml
@@ -1,9 +1,12 @@
-# 2022-04-20, test traefik and gitlab, assume that the domain is: wode.com
+# 2022-04-20, test traefik and gitlab
+# sudo touch /data/acme.json && chmod 600 /data/acme.json
+# docker network create traefik-public
+# domain name: wode.com
 version: "3.7"
 services:
 
   traefik:
-    image: traefik:v2.3.1
+    image: traefik:v2.6.3
     container_name: traefik
     restart: always
     networks:
@@ -11,43 +14,29 @@ services:
     ports: 
       - "80:80"
       - "443:443"
-      #- "10180:8080"
-      #- "10182:8082"
     environment: 
       - "TZ=Asia/Shanghai"
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock:ro
       - /var/log/traefik/:/logs/
+      - /data/acme.json:/acme.json
     command:
-      # 1.Enable Docker in Traefik, so that it reads labels from Docker services
       - "--providers.docker=true"
-      # 2.Enable Docker Swarm mode
       - "--providers.docker.swarmMode=false"
-      # 3.Add a constraint to only use services with the label for this stack
-      # from the env var TRAEFIK_TAG
-      #- "--providers.docker.constraints=LabelRegx(`traefik.constraint-label-stack`, `gitlab.+`)"
-      # 4.Do not expose all Docker services, only the ones explicitly exposed
+      #- "--providers.docker.constraints=LabelRegx(`traefik.constraint-label-stack`, `git.+`)"
       - "--providers.docker.exposedbydefault=false"
-      # 5-8
       - "--providers.file.watch=true"
       - "--entryPoints.http.address=:80"
       - "--entryPoints.https.address=:443"
       - "--entryPoints.http.forwardedHeaders.trustedIPs=0.0.0.0/0"
       - "--entryPoints.traefik.address=:8080"
-      
-      # 9.Enable the Traefik log, for configurations and errors
       - "--log=true"
-      # 10-11
-      - "--log.level=DEBUG"
+      - "--log.level=INFO"
       - "--log.filePath=/logs/traefik.log"
-      # 12.Enable the Dashboard and API
       - "--api=true"
-      # 13-14
       - "--api.insecure=true"
       - "--ping=true"
-      # 15.Enable the access log, with HTTP requests
       - "--accessLog=true"
-      # 16-21
       - "--accesslog.filePath=/logs/traefik-access.log"
       - "--accesslog.filters.statuscodes=200,300-302"
       - "--accesslog.filters.minduration=200ms"
@@ -55,59 +44,118 @@ services:
       - "--accesslog.bufferingSize=200"
       - "--accesslog.fields.headers.names.ClientAddr=keep"
 
+      - "--certificatesResolvers.lets-encrypt.acme.httpChallenge=true"
+      - "--certificatesResolvers.lets-encrypt.acme.storage=acme.json"
+      - "--certificatesResolvers.lets-encrypt.acme.email=xxxxxx@163.com"
+      - "--certificatesResolvers.lets-encrypt.acme.httpChallenge.entrypoint=http"
+
+
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 500M
+        reservations:
+            memory: 200M
+
     labels:
-      # 1.Enable Traefik for this service, to make it available in the public network
       - "traefik.enable=true"
-      # 2.Use the traefik-public network (declared below)
       - "traefik.docker.network=traefik-public"
-      # 3.Use the custom label "traefik.constraint-label=traefik-public"
-      # This public Traefik will only use services with this label
       - "traefik.constraint-label=traefik_public_tag"
-      # 4-6
       - "traefik.http.routers.stack-proxy-http.rule=Host(`traefik.wode.com`)"
-      - "traefik.http.routers.stack-proxy-http.entrypoints=http"
+      - "traefik.http.routers.stack-proxy-http.entrypoints=https"
       - "traefik.http.services.stack-porxy.loadbalancer.server.port=8080"
-      
+
+      # config below domains to https
+      - "traefik.http.routers.stack-proxy-http.tls.certresolver=lets-encrypt"
+      - "traefik.http.routers.stack-proxy-http.tls.domains[0].main=traefik.wode.com"
+      - "traefik.http.routers.stack-proxy-http.tls.domains[0].sans=wode.com"
+
+      # HTTP REDIRECT
+      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+      - "traefik.http.routers.redirect-https.rule=hostregexp(`{host:.+}`)"
+      - "traefik.http.routers.redirect-https.entrypoints=http"
+      - "traefik.http.routers.redirect-https.middlewares=redirect-to-https"
+
 
   gitlab:
-    image: gitlab/gitlab-ce:14.9.3-ce.0
+    image: gitlab/gitlab-ce:13.10.0-ce.0
     container_name: my-gitlab
-    #hostname: git.wode.com
     restart: always
+    hostname: git.wode.com
     networks:
       - traefik-public
     ports:
-      - "10080:80"
+      - "10081:80"
+      - "10083:443"
       - "9922:22"
     environment:
       - TZ=Asia/Shanghai
       - DEBUG=false
       - GITLAB_OMNIBUS_CONFIG=external_url 'http://git.wode.com';gitlab_rails['time_zone']='Asia/Shanghai';
-
+  
     volumes:
       - "/data/gitlab/etc:/etc/gitlab"
       - "/data/gitlab/log:/var/log/gitlab"
       - "/data/gitlab/opt:/var/opt/gitlab"
+
+    deploy:
+      resources:
+        limits:
+          cpus: '4.0'
+          memory: 8000M
+        reservations:
+            memory: 200M
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=traefik-public"
-      - "traefik.http.routers.gitlab-frontend-http.entrypoints=http"
-      - "traefik.http.routers.gitlab-frontend-http.rule=Host(`git.wode.com`)"
-      - "traefik.http.services.gitlab-frontend.loadbalancer.server.port=80"
+      - "traefik.http.routers.gitlab_insecure.entrypoints=http"
+      - "traefik.http.routers.gitlab_insecure.rule=Host(`git.wode.com`)"
+      - "traefik.http.routers.gitlab_insecure.middlewares=redirect-to-https@docker"
+
+      - "traefik.http.routers.gitlab.tls=true"
+      - "traefik.http.routers.gitlab.entrypoints=https"
+      - "traefik.http.routers.gitlab.rule=Host(`git.wode.com`)"
+      - "traefik.http.routers.gitlab.tls.certresolver=lets-encrypt"
+      - "traefik.http.routers.gitlab.service=gitlab_service"
+      - "traefik.http.services.gitlab_service.loadbalancer.server.port=80"
+      
 
   tomcat:
     image: tomcat:8.5.31-jre8
     restart: always
     networks:
       - traefik-public
-    #ports:
-    #  - "18080:8080"
+    ports:
+      - "10080:8080"
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=traefik-public"
-      - "traefik.http.routers.tomcat-frontend-http.entrypoints=http"
+      - "traefik.http.routers.tomcat-frontend-http.entrypoints=https"
       - "traefik.http.routers.tomcat-frontend-http.rule=Host(`tomcat.wode.com`)"
       - "traefik.http.services.tomcat-frontend.loadbalancer.server.port=8080"
+      - "traefik.http.routers.tomcat-frontend-http.tls.certresolver=lets-encrypt"
+      
+
+  portainer:
+    image: portainer/portainer
+    container_name: my-portainer
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /data/portainer:/data
+    networks:
+      - traefik-public
+    labels:
+      - traefik.enable=true
+      - "traefik.docker.network=traefik-public"
+      - traefik.http.routers.portainer_insecure.entrypoints=http
+      - traefik.http.routers.portainer_insecure.rule=Host(`portainer.wode.com`)
+      - traefik.http.routers.portainer_insecure.middlewares=redirect-to-https@docker
+
+      - traefik.http.routers.portainer.entrypoints=https
+      - traefik.http.routers.portainer.rule=Host(`portainer.wode.com`)
+      - traefik.http.routers.portainer.tls.certresolver=lets-encrypt
+      - traefik.http.services.portainer.loadbalancer.server.port=9000
 
 networks:
   traefik-public:
