--- a/docker-compose-traefik.yml
+++ b/docker-compose-traefik.yml
@@ -94,7 +94,7 @@ services:
     environment:
       - TZ=Asia/Shanghai
       - DEBUG=false
-      - GITLAB_OMNIBUS_CONFIG=external_url 'http://git.wode.com';gitlab_rails['time_zone']='Asia/Shanghai';gitlab_rails['gitlab_shell_ssh_port']='10022';
+      - GITLAB_OMNIBUS_CONFIG=external_url 'http://git.wode.com';gitlab_rails['time_zone']='Asia/Shanghai';gitlab_rails['gitlab_shell_ssh_port']='10022';prometheus['enable']='false';grafana['enable']='false';redis_exporter['enable']='false';gitlab_exporter['enable']='false';node_exporter['enable']='false';postgres_exporter['enable']='false';alertmanager['enable']='false';
   
     volumes:
       - "/data/gitlab/etc:/etc/gitlab"
